2009-06-24  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
	This patch adds the -t/--trash option, to delete files that have
	previously been generated by PoCC. Plus some code refactoring for
	the execve wrapper.

	* driver/pocc/include/pocc/exec.h,
	* driver/pocc/exec.c: New. execve wrapper for PoCC (was in:
	driver-codegen)
	* driver/pocc/Makefile.am,
	* driver/pocc/include/pocc/driver-codegen.h,
	* driver/pocc/driver-codegen.c: Update accordingly.

	* driver/pocc/include/pocc/options.h,
	* driver/pocc/options.c,
	* driver/src/options.h,
	* driver/src/options.c: Add option -t, to trash files previously
	generated by PoCC.
	* doc/pocc.texi: Update accordingly.

	* driver/src/pocc.c,
	* driver/src/Makefile.am,
	* generators/scripts/trash: New. Script to trash files.

2009-06-24  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
	This patch adds a timeout option, to stop extra long version /
	compilations during the iterative process. Problems have been
	reported on some benchmarks being too long and too difficult to
	compile for GCC (>1h of compilation).

	* driver/pocc/driver-codegen.c,
	* driver/pocc/options.c,
	* driver/pocc/include/pocc/options.h,
	* driver/src/options.c,
	* driver/src/options.h: Add the --prog-timeout <seconds> option,
	and use perl to perform the timeout (alarm function of perl).

	* README,
	* doc/pocc.texi: Update accordingly. Also mention Perl as a
	required program for PoCC to work.

2009-06-24  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
	This patch moves to the new irregular clan branch, clan-ir, which
	supports scoplib.

	* driver/pocc/driver-clan.c: Change clan call to
	clan_scop_extract, to allow pre/post code to be performed along
	clan_parse.
	* config/irregular/configure.cfg,
	* config/irregular/driver.cfg: Move to new irregular branch
	clan-ir instead of former, non scoplib-compatible cir branch.

	* driver/src/pocc.c: Minor fix in verbosity.

2009-06-22  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
