@@ -29,8 +29,8 @@ static const struct s_opt       opts[POCC_NB_OPTS] =
 {
   { 'h', "help", 0, "\t\tPrint this help" },
   { 'v', "version", 0, "\tPrint version information" },
-  { 'o', "output", 1, "\tOutput file [filename.pocc.c]\n" },
-  { 't', "trash", 0, "\tTrash files previously generated by PoCC [off]\n" },
+  { 'o', "output", 1, "\tOutput file [filename.pocc.c]" },
+  { 'd', "delete-files", 0, "\tDelete files previously generated by PoCC [off]\n" },
   { '\0', "verbose", 0, "\tVerbose output [off]" },
   { '\0', "quiet", 0, "\tMinimal output [off]\n" },
   { 'l', "letsee", 0, "\tOptimize with LetSee [off]" },
