@@ -47,7 +47,7 @@ int main(int argc, char** argv)
   if (poptions->trash)
     {
       if (! poptions->quiet)
-	printf ("[PoCC] Trashing files previously generated by PoCC for %s\n",
+	printf ("[PoCC] Deleting files previously generated by PoCC for %s\n",
 		poptions->input_file_name);
       char* args[3];
       args[0] = STR_POCC_ROOT_DIR "/generators/scripts/trash";
