@@ -1,3 +1,7 @@
+2009-07-02  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
+
+	* driver/src/options.c: Change trash option from -t to -d.
+
 2009-06-24  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
 	This patch adds the -t/--trash option, to delete files that have
 	previously been generated by PoCC. Plus some code refactoring for
